java-app/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-health-check-app
  namespace: dev
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: java-health-check-app
      template:
        metadata:
          labels:
            app: java-health-check-app
          spec:
            containers:
            - name: java-app
              image: anudeepbm1993/flywheel-java-app:v1.0
              ports:
              - containerPort: 8080
              resources:
                requests:
                  cpu: "100m"
                  memory: "128Mi"
                limits:
                  cpu: "500m"
                  memory: "512Mi"
              securityContext:
                runAsNonRoot: true
                runAsUser: 1000
                allowPrivilegeEscalation: false
              readinessProbe:
                httpGet:
                  path: /health
                  port: 8080
                initialDelaySeconds: 10
                periodSeconds: 5
              livenessProbe:
                httpGet:    
                  path: /health
                  port: 8080
                initialDelaySeconds: 15
                periodSeconds: 10
            imagePullSecrets:
            - name: regcred
