java-app/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-health-check-svc
  namespace: dev
spec:
  selector:
    app: java-health-check
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
